# saas_igreja

./: .env.example  .gitignore  CLAUDE.md  PRD.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.claude/agent-memory/code-reviewer-tech-lead/: MEMORY.md  spec-doc-map.md  spec-gaps-sprint0.md
.claude/agent-memory/devops-infra-engineer/: MEMORY.md  project_scaffold_tooling.md  user_owner_governance.md
.claude/agent-memory/django-tenants-backend/: MEMORY.md  project_dashboard_metrics_scoping.md  project_dev_tooling.md  project_file_context_scoping.md  project_libmagic_png_fixtures.md  project_tenant_provisioning.md  user_profile.md
.claude/agent-memory/frontend-htmx-alpine-tailwind/: MEMORY.md  design-pilot-list-pages.md  f2-configurable-terms.md  owner-workflow.md  shell-athos-v2.md  tailwind-v4-build.md
.claude/agent-memory/postgres-django-tenants-engineer/: MEMORY.md  ruff-dj-str-required.md  tenant-isolation-verification.md  test-fixture-schema-names.md
.claude/agent-memory/qa-pytest-playwright/: MEMORY.md  feedback_debug_toolbar_tests.md  project_django_tenants_test_db.md  project_invite_email_test_pattern.md  project_provisioning_test_pattern.md  user_owner.md
.claude/agent-memory/security-lgpd-engineer/: MEMORY.md  audit_infrastructure.md  auth_allauth_axes.md  authz_multirole.md  files_download_audit.md  supportaccess_flow.md  tenant_testing_gotchas.md
.claude/agents/: code-reviewer-tech-lead.md  devops-infra-engineer.md  django-tenants-backend.md  frontend-htmx-alpine-tailwind.md  postgres-django-tenants-engineer.md  qa-pytest-playwright.md  security-lgpd-engineer.md
.github/workflows/: ci.yml
agents/: README.md  backend-engineer.md  code-reviewer.md  database-engineer.md  devops-engineer.md  frontend-engineer.md  qa-engineer.md  security-engineer.md
apps/accounts/: adapter.py  apps.py  axes_helpers.py  backends.py  forms.py  models.py  services.py  signals.py  urls.py  validators.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_invite_roles_alter_user_roles.py
apps/accounts/tests/: test_access_travas.py  test_auth_flows.py  test_authz_services.py  test_axes_lockout.py  test_invite_views.py  test_invites_extra.py  test_invites_services.py  test_mfa.py  test_password_policy.py  test_platform_support_mixin.py  test_security_headers.py  test_support_access.py  test_support_access_views.py  test_user.py  test_user_access.py  test_user_list_view.py
apps/communities/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/communities/migrations/: 0001_initial.py  0002_initial.py  0003_remove_community_leader_community_leaders.py  0004_community_category_community_max_members.py
apps/communities/tests/: test_design_fields.py  test_models.py  test_page_stats.py  test_services.py  test_session_view.py  test_views.py
apps/core/: admin.py  apps.py  audit.py  context_processors.py  middleware.py  mixins.py  models.py  sentry.py  signals.py  storage.py  validators.py  views.py
apps/core/migrations/: 0001_initial.py  0002_alter_securitylog_event_type.py  0003_alter_securitylog_event_type.py  (+2 more)
apps/dashboard/: services.py  urls.py  views.py
apps/e2e/: conftest.py  test_e2e_a11y.py  test_e2e_flows.py  test_e2e_nav.py
apps/files/: apps.py  forms.py  models.py  responses.py  services.py  signals.py  urls.py  views.py
apps/finance/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/gatherings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/ministries/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/people/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/schedules/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  tokens.py  urls.py  views.py
apps/tenants/: forms.py  middleware.py  models.py  services.py  urls.py  views.py
compose/django/: Dockerfile
core/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
docs/: ACCESS_MATRIX.md  BACKLOG.md  DEPLOY.md  MONITORING.md  OPEN_DECISIONS.md  README.md  SPEC_CARDS_GRAFICOS.md  SPEC_COMUNIDADES_V2.md  SPEC_ESCALAS_V2.md  SPRINTS.md  TECH_SPEC.md  TECH_SPEC_VALIDATION.md  TEST_STRATEGY.md  THREAT_MODEL.md  modelo_cadastro_membros.xlsx
referencias/prototipos/: landing_terracota_v1.html
referencias/templates/: igreja_saas_novo.html  igreja_saas_personalizado.html
static/css/: app.css
static/src/: input.css
templates/: 403.html  404.html  500.html  app_base.html  base.html  styleguide.html
templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
templates/components/: _chart.html  _info_tooltip.html  _nav_link.html  _side_link.html  _stat_cards.html  avatar.html  badge.html  empty_state.html  form.html  form_field.html  nav.html  page_header.html  pagination.html  sidebar_nav.html  skeleton.html
(+305 files in other folders)
