[project]
name = "saas-igreja"
version = "0.1.0"
description = "SaaS de gestao de igrejas multi-tenant (schema-per-tenant)."
requires-python = ">=3.12,<3.13"

# Dependencias de runtime (Sprint 1 scaffold).
# Cada item referencia a decisao/requisito que o justifica:
#   - Django 5.2          : stack oficial (TECH_SPEC Secao 1).
#   - django-tenants      : schema-per-tenant (RN-001, TENANT-01).
#   - django-allauth      : login por email (SEC-02, P-ARQ-03); usado a partir da Sprint 2.
#   - django-axes         : account lockout / brute force (SEC-02); usado a partir da Sprint 2.
#   - sentry-sdk          : observabilidade + tag tenant_id + before_send PII (TECH_SPEC Secao 12.3).
#   - psycopg2-binary     : driver PostgreSQL (banco obrigatorio, AP-13).
#   - redis               : broker/result Celery + readiness check (OD-003, TECH_SPEC Secao 12.1).
#   - celery              : tasks assincronas (OD-003 / A3 — desde Sprint 1).
#   - python-decouple     : secrets via env vars, nunca no codigo (SEC-06 / AP-12).
#   - weasyprint          : RESSALVA — incluido por exigencia explicita da sub-task de scaffold.
#                           TECH_SPEC Secao 10 (A4) marca WeasyPrint como Fase 2 (MVP usa browser
#                           print via @media print). Declarado aqui, mas NAO deve ser usado no MVP
#                           ate a Fase 2. Imagem Docker pesa ~200MB por causa dele.
#   - django-storages[s3] : backend de storage S3-compatible para Cloudflare R2 (OD-003a / OD-007).
#                           Usado SO em prod (prod.py -> STORAGES['default'] S3); dev/teste usam
#                           FileSystemStorage local. O extra [s3] puxa boto3. Sprint 6 (storage de
#                           midia, RNF-018 / RISK-005). 1.14.x usa a API STORAGES do Django 4.2+/5.x.
dependencies = [
    "django>=5.2,<5.3",
    "django-tenants>=3.7",
    "django-allauth[mfa]>=65.0",
    "django-axes>=7.0",
    "sentry-sdk[django]>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery>=5.4",
    "python-decouple>=3.8",
    "weasyprint>=62.0",
    "django-anymail[brevo]>=15.0",
    "django-storages[s3]>=1.14",
]

# Dependencias de desenvolvimento/CI (formato uv: PEP 735 dependency-groups).
# Instaladas no CI via `uv sync` para que lint, auditoria e testes rodem.
#   - ruff, black                 : lint + format (TECH_SPEC Secao 6, STYLE-01).
#   - pytest, pytest-django,
#     pytest-cov                  : test suite + cobertura (gate --cov-fail-under=80 no CI).
#   - pip-audit, safety           : auditoria de CVEs (SEC-07).
#   - nplusone                    : levanta erro em queries N+1 (P-ARQ-09 / RNF-024).
#                                   Configurado so em dev (NPLUSONE_RAISE=True).
#   - django-debug-toolbar        : inspecao de queries/perf em dev (Performance
#                                   baseline da Sprint 1). Dev-only; nunca em prod.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "safety>=3.2",
    "nplusone>=1.0",
    "django-debug-toolbar>=4.4",
]

# ----------------------------------------------------------------------------
# Black — formatador. Max line 88 (STYLE-01). Aspas simples preservadas via
# skip-string-normalization (Black por padrao converte para aspas duplas).
# ----------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true
extend-exclude = '''
/(
    migrations
  | \.venv
)/
'''

# ----------------------------------------------------------------------------
# Ruff — linter. Coerente com Black (line-length 88). Aspas simples no quote
# style para casar com skip-string-normalization do Black (STYLE-01).
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["migrations", ".venv"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, DJ flake8-django.
select = ["E", "W", "F", "I", "UP", "B", "DJ"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["apps", "core"]

# ----------------------------------------------------------------------------
# pytest — runner do projeto. DJANGO_SETTINGS_MODULE casa com o CI
# (core.settings.dev: NPLUSONE_RAISE=True, Postgres via django_tenants backend).
# Sem --cov-fail-under aqui: o gate de cobertura e aplicado no fim da sprint
# (TEST_STRATEGY §3/§8), nao a cada execucao local — manter a suite rodavel.
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'core.settings.dev'
python_files = 'test_*.py'
python_classes = 'Test*'
python_functions = 'test_*'
testpaths = ['apps']
addopts = '-ra'
